schema/testdata/validation_operation_create_missing_inputs/schema.keel
model Person {
    fields {
        name Text
        age Number
    }
    actions {
        create createPerson() with (name)
    }
}