schema/testdata/errors/operation_inputs_match_model_fields.keel
model Person {
    fields {
        name Text
    }

    actions {
        //expect-error:43:47:E005:Action inputs must be one of the fields defined in the model
        create createPerson() with (name, blah)
    }
}
